3번화면 추가 -메인에서 적은 문구를 들고 3번에 전달

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,16 @@
         android:text="다음페이지로"
         />
 
+    <EditText
+        android:id="@+id/edtMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="3번화면에 전달할 메세지"/>
+    <Button
+        android:id="@+id/btnMoveToThird"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3번화면으로 메세지 들고 이동"/>
+
 </LinearLayout>
 </layout>
