--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="3번화면에 전달할 메세지"/>
+    <EditText
+        android:id="@+id/edtNumber"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="3번화면에 전달할 숫자"/>
     <Button
         android:id="@+id/btnMoveToThird"
         android:layout_width="match_parent"
